<resources>
    <string name="app_name">Crud Firebase</string>
    <string name="inp_nama">Masukan Nama</string>
    <string name="inp_kelas">Masukan Kelas</string>
    <string name="inp_nim">Masukan Nim</string>
    <string name="inp_email">Masukan Email</string>
    <string name="bt_save">Save Data !</string>
    <string name="bt_liatdata">Lihat Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_back">Kembali !</string>
    <string name="bt_update">Update Now !</string>
</resources>
